<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventlist"
    android:name="ch.hsr.afterhour.gui.fragment_myprofile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layoutManager="LinearLayoutManager"
    tools:context="ch.hsr.afterhour.gui.EventListFragment"
    tools:listitem="@layout/fragment_event" />
