<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ProgressBar
        android:id="@+id/scanner_progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/coatcheckscanner_view">

        <SurfaceView
            android:id="@+id/scanner_camera_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/scanner_info_bar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textSize="20sp"
            android:text="@string/placeholder_text"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>