...
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_register">Register</string>
    <string name="unexpected_error">Unexpected error occurred</string>
    <string name="placeholder_event_description">Event Description</string>
    <string name="wrong_login_credentials">Wrong username or password</string>

    <!-- strings related to profile-->
    <string name="firstname">First name</string>
    <string name="name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
...
