<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_button"
        android:showAsAction="always"
        android:title="MENU"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/nav_item_toggle_login"
        android:icon="@drawable/ic_portrait_black"
        android:title="@string/employee_login" />

    <item
        android:id="@+id/nav_item_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

</menu>
